<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileActivity.MyProfileActivity"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topDarkFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/dark_blue"
        app:layout_constraintVertical_weight=".5">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logOutButton"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            app:srcCompat="@mipmap/my_photo"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/transparent_button"
            android:fontFamily="@font/open_sans_medium"
            android:minWidth="0dp"
            android:minHeight="40dip"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textColor="@color/profile_gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/settingsTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/settingsTextView" />

        <TextView
            android:id="@+id/settingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_medium"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:typeface="serif" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImageView"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/open_sans_medium"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="19sp"/>

        <TextView
            android:id="@+id/careerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/nameTextView"
            app:layout_constraintStart_toStartOf="@+id/nameTextView"
            app:layout_constraintTop_toBottomOf="@id/nameTextView"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/open_sans_medium"
            android:text="@string/career"
            android:textColor="@color/profile_gray"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/careerTextView"
            app:layout_constraintStart_toStartOf="@+id/careerTextView"
            app:layout_constraintTop_toBottomOf="@id/careerTextView"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="45dp"
            android:fontFamily="@font/open_sans_medium"
            android:text="@string/home_address"
            android:textColor="@color/profile_gray"
            android:textSize="15sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomLightFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topDarkFrame"
        app:layout_constraintVertical_weight=".5">

        <RelativeLayout
            android:id="@+id/facebookLayout"
            app:layout_constraintBottom_toTopOf="@+id/editProfileButt"
            app:layout_constraintEnd_toStartOf="@+id/linkedinLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginBottom="52dp"
            android:background="@drawable/border_social_network"
            android:padding="5dp">

            <ImageView
                android:id="@+id/facebookIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                app:srcCompat="@drawable/facebook_icon"
                app:tint="@color/orange" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/linkedinLayout"
            app:layout_constraintBottom_toBottomOf="@+id/facebookLayout"
            app:layout_constraintEnd_toStartOf="@+id/instagramLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/facebookLayout"
            app:layout_constraintTop_toTopOf="@+id/facebookLayout"
            app:layout_constraintVertical_bias="0.5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/border_social_network"
            android:padding="5dp">

            <ImageView
                android:id="@+id/linkedinIcon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                app:srcCompat="@drawable/in_icon"
                app:tint="@color/orange" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/instagramLayout"
            app:layout_constraintBottom_toBottomOf="@+id/facebookLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/linkedinLayout"
            app:layout_constraintTop_toTopOf="@+id/facebookLayout"
            app:layout_constraintVertical_bias="0.5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/border_social_network"
            android:padding="5dp">

            <ImageView
                android:id="@+id/instagramIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                app:srcCompat="@drawable/instagram_icon"
                app:tint="@color/orange" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editProfileButt"
            app:layout_constraintBottom_toTopOf="@+id/viewContactsButt"
            app:layout_constraintEnd_toEndOf="@+id/viewContactsButt"
            app:layout_constraintStart_toStartOf="@+id/viewContactsButt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/transparent_black_button"
            android:minHeight="42dip"
            android:text="@string/edit_profile"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/viewContactsButt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/orange"
            android:letterSpacing="0.15"
            android:minHeight="62dip"
            android:text="@string/view_my_contacts"
            android:textSize="16sp"
            app:cornerRadius="5dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>